--- a/_data/love.yml
+++ b/_data/love.yml
@@ -1,7 +1,8 @@
 # Does Statically help you and your project?
 # We'll be very happy if you add your website here
 # Please add to the top
-
+- nama : inhib
+  tautan : "https://inhib.site"
 - name: Marsble
   link: "https://marsble.com"
 
